Bug 325572 - KDE constantly forgets per application keyboard layout settings
Summary: KDE constantly forgets per application keyboard layout settings
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_keyboard_layout (other bugs)
Version First Reported In: 5.3.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Andriy Rysin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-03 07:28 UTC by nine
Modified: 2015-09-30 20:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nine 2013-10-03 07:28:59 UTC
I use two keyboard layouts English and German and set the keyboard layout switching policy to Application in the Keyboard KDE control module. I want konsole to use the English layout and all other applications use the German layout so German is on top of the layouts list.

This setup works most of the time but after every reboot konsole is back to German layout and sometimes it switches back even during sessions.

Reproducible: Always

Steps to Reproduce:
1. configure at least two keyboard layouts in the Keyboard KDE control module
2. set Switching Policy to Application
3. start konsole and set the keyboard layout to the secondary layout
4. logout
5. login again
6. start console
Actual Results:  
konsole is using the primary layout

Expected Results:  
konsole should be using the secondary layout selected in step 3
Comment 1 nine 2015-06-20 10:04:19 UTC
I can still reproduce this on plasma5-desktop 5.3.1 on openSUSE Tumbleweed.

Do you have any pointers for me where I could start looking myself?
Is systemsettings the right product for this bug report?
Comment 2 David Rosca 2015-09-30 20:43:16 UTC
Git commit 3768587fc6807e06dbf257dd51e2d9f2e42dd1b9 by David Rosca.
Committed on 30/09/2015 at 20:39.
Pushed by drosca into branch 'Plasma/5.4'.

kded_keyboard: Fix restoring application/window specific layout settings

This removes the check if user has restore session on start option
enabled, so the layout map is restored everytime.

It also checks in LayoutMemory::laoutChanged if the changed keyboard
layout is different from user configured to prevent clearing the layout
map on startup.
FIXED-IN: 5.4.2
REVIEW: 125256

M  +2    -3    kcms/keyboard/layout_memory.cpp
M  +11   -25   kcms/keyboard/layout_memory_persister.cpp

http://commits.kde.org/plasma-desktop/3768587fc6807e06dbf257dd51e2d9f2e42dd1b9