kded_keyboard: Fix restoring application/window specific layout settings

This removes the check if user has restore session on start option
enabled, so the layout map is restored everytime.

It also checks in LayoutMemory::laoutChanged if the changed keyboard
layout is different from user configured to prevent clearing the layout
map on startup.

BUG: 325572
FIXED-IN: 5.4.2
REVIEW: 125256